--- a/src/static/styles/error/notNow.css
+++ b/src/static/styles/error/notNow.css
@@ -1,4 +1,24 @@
+body {
+    background-color: var(--YELLOW);
+}
+
 .app {
     text-align: center;
     margin-top: 100px;
+}
+
+h1 {
+    font-size: 25px;
+}
+
+p {
+    font-size: 20px;
+}
+
+label {
+    font-size: 15px;
+}
+
+.app *:hover {
+    cursor: default;
 }
