--- a/src/views/error/403.pug
+++ b/src/views/error/403.pug
@@ -4,7 +4,11 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet", href="/styles/global.css")
+        link(rel="stylesheet", href="/styles/error/403.css")
         title Alto
     body
         .error
-            p no puedes entrar sin mi permiso >:(
+            h1(class="title") no puedes entrar aquí sin mi permiso 😠
+            button(class="btn")
+                a(href="/") Inicio
