--- a/src/views/puzzle/first.pug
+++ b/src/views/puzzle/first.pug
@@ -4,5 +4,13 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet", href="/styles/global.css")
+        link(rel="stylesheet", href="/styles/puzzle/first.css")
+        script(src="/scripts/puzzle/first.js" defer) 
+        link(rel="shortcut icon", href="/images/icon.png", type="image/x-icon")
         title first-puzzle
-    body 
+    body
+        .header
+            h1(class="title") Espero y seas buena para resolver acertijos porque de esto se trata el primer reto 😈
+        .puzzle
+
