--- a/src/views/puzzle/first.pug
+++ b/src/views/puzzle/first.pug
@@ -12,5 +12,26 @@ html(lang="en")
     body
         .header
             h1(class="title") Espero y seas buena para resolver acertijos porque de esto se trata el primer reto 😈
+            label(class="text") Y si estarán en verso...(no soy bueno para las rimas JAJANT)
+            button(class="btn start", id="start") Empezar
         .puzzle
-
+            div(class="question first")
+                h2(class="title") Una gatita que le gusta el mambo
+                input(type="text")
+                button(class="btn") Verificar
+            div(class="question second")
+                h2(class="title") Mauricio
+                input(type="text")
+                button(class="btn") Verificar
+            div(class="question third")
+                h2(class="title") Cuemanco
+                input(type="text")
+                button(class="btn") Verificar
+            div(class="question fourth")
+                h2(class="title") DIO
+                input(type="text")
+                button(class="btn") Verificar
+            div(class="question five")
+                h2(class="title") Otra
+                input(type="text")
+                button(class="btn") Verificar
