--- a/src/static/styles/global.css
+++ b/src/static/styles/global.css
@@ -40,3 +40,46 @@
     cursor: pointer;
     background-color: var(--DARK-BLUE);
 }
+
+.error-label {
+    background-color: var(--RED);
+    position: relative;
+    padding: 15px;
+    border-radius: 5px;
+    color: white;
+    margin: 5px 0;
+    cursor: default;
+    display: none;
+}
+
+.bars {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+
+    right: 10px;
+    top: 5px;
+}
+
+.bars:hover {
+    cursor: pointer;
+}
+
+.bars:hover .bar1, .bars:hover .bar2 {
+    background-color: red;
+}
+
+.bar1, .bar2 {
+    background-color: white;
+    height: 3px;
+    width: 20px;
+    border-radius: 15px;
+}
+
+.bar1 {
+    transform: rotate(-45deg) translate(-8px, 6px);
+}
+
+.bar2 {
+    transform: rotate(45deg) translate(5px, 5px);
+}
