--- a/src/views/puzzle/second.pug
+++ b/src/views/puzzle/second.pug
@@ -6,6 +6,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/styles/global.css")
         link(rel="stylesheet", href="/styles/puzzle/second.css")
+        link(rel="shortcut icon", href="/images/icon.png", type="image/x-icon")
         script(src="/scripts/puzzle/second.js" defer) 
         title second-puzzle
     body
