--- a/src/views/gift.pug
+++ b/src/views/gift.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/styles/global.css")
+        link(rel="shortcut icon", href="/images/icon.png", type="image/x-icon")
         title Feliz cumpleaños!!!
     body
         .content
