--- a/src/views/puzzle/second.pug
+++ b/src/views/puzzle/second.pug
@@ -13,55 +13,55 @@ html(lang="en")
         .instrucciones
             h1 para este reto tienes que rellenar las palabras faltantes de las canciones
             h1 NO puedes buscar la letra, puedes buscar la canción y a oído rellenar las palabras faltantes
-        button(id="start") EMPEZAR
+        button(id="start" class="btn") EMPEZAR
         .song
-            p 
+            p(class="text")
                 | Que se quede el 
                 input(type="text" class="word")
                 | sin estrellas
-            p 
+            p(class="text")
                 | O que pierda el ancho mar su 
                 input(type="text" class="word")
 
-            p 
+            p(class="text")
                 | Pero el 
                 input(type="text" class="word")
                 | de tus ojos que no
                 input(type="text" class="word")
-            p 
+            p(class="text")
                 | Y el 
                 input(type="text" class="word")
                 | de tu piel se quede igual
 
-            p 
+            p(class="text")
                 | Si perdiera el 
                 input(type="text" class="word")
                 | su belleza
 
-            p 
+            p(class="text")
                 | Y las flores su 
                 input(type="text" class="word")
                 | y su color
 
-            p 
+            p(class="text")
                 | No sería tan inmensa mi 
                 input(type="text" class="word")
 
-            p 
+            p(class="text")
                 | Como aquella de quedarme sin tu 
                 input(type="text" class="word")
 
-            p 
+            p(class="text")
                 | Me importas 
                 input(type="text" class="word")
                 | , y tú, y tú
-            p 
+            p(class="text")
                 | Y solamente tú, y 
                 input(type="text" class="word")
                 | , y tú
-            p 
+            p(class="text")
                 | Me importas tú, y tú, y 
                 input(type="text" class="word")
             input(type="text" class="word")
-            button(id="validar" class="validar") VALIDAR
+            button(id="validar" class="validar btn") VALIDAR
         .song
