--- a/src/views/puzzle/first.pug
+++ b/src/views/puzzle/first.pug
@@ -16,22 +16,61 @@ html(lang="en")
             button(class="btn start", id="start") Empezar
         .puzzle
             div(class="question first")
-                h2(class="title") Una gatita que le gusta el mambo
-                input(type="text")
-                button(class="btn") Verificar
+                h2(class="title") El gato fue encontrado en un lugar muy atareado, con nombre del lugar fue llamado
+                input(type="text", class="result")
+                button(class="btn verify") Verificar
+                .error-label(class="error", id="error")
+                    .bars(id="bars")
+                        .bar1
+                        .bar2
+                    p(class="text") Esa no es ji ji ji
+
             div(class="question second")
-                h2(class="title") Mauricio
-                input(type="text")
-                button(class="btn") Verificar
+                h2(class="title") Mitad perro mitad pudin de nata, no lo olvides o te dará lata
+                input(type="text", class="result")
+                button(class="btn verify") Verificar
+                .error-label(class="error", id="error")
+                    .bars(id="bars")
+                        .bar1
+                        .bar2
+                    p(class="text") Esa no es ji ji ji
+
             div(class="question third")
-                h2(class="title") Cuemanco
-                input(type="text")
-                button(class="btn") Verificar
+                h2(class="title") Lugar de flores, lugar de ranas, ten cuidado o tu celular estará en el agua
+                input(type="text", class="result")
+                button(class="btn verify") Verificar
+                .error-label(class="error", id="error")
+                    .bars(id="bars")
+                        .bar1
+                        .bar2
+                    p(class="text") Esa no es ji ji ji
+
             div(class="question fourth")
-                h2(class="title") DIO
-                input(type="text")
-                button(class="btn") Verificar
+                h2(class="title") En un instante, el mito estalló, detrás de mi, detrás de vos...
+                input(type="text", class="result")
+                button(class="btn verify") Verificar
+                .error-label(class="error", id="error")
+                    .bars(id="bars")
+                        .bar1
+                        .bar2
+                    p(class="text") Esa no es ji ji ji
+
             div(class="question five")
-                h2(class="title") Otra
-                input(type="text")
-                button(class="btn") Verificar
+                h2(class="title") Que?
+                input(type="text", class="result")
+                button(class="btn verify") Verificar
+                .error-label(class="error", id="error")
+                    .bars(id="bars")
+                        .bar1
+                        .bar2
+                    p(class="text") Esa no es ji ji ji
+
+            div(class="question five")
+                h2(class="title") Donde la historia nació con un puño inició
+                input(type="text", class="result")
+                button(class="btn verify") Verificar
+                .error-label(class="error", id="error")
+                    .bars(id="bars")
+                        .bar1
+                        .bar2
+                    p(class="text") Esa no es ji ji ji
