--- a/src/views/puzzle/second.pug
+++ b/src/views/puzzle/second.pug
@@ -17,51 +17,112 @@ html(lang="en")
         .song
             p(class="text")
                 | Que se quede el 
-                input(type="text" class="word")
+                input(type="text" class="word first")
                 | sin estrellas
             p(class="text")
                 | O que pierda el ancho mar su 
-                input(type="text" class="word")
-
+                input(type="text" class="word first")
             p(class="text")
                 | Pero el 
-                input(type="text" class="word")
-                | de tus ojos que no
-                input(type="text" class="word")
+                input(type="text" class="word first")
+                | de tus ojos que no 
+                input(type="text" class="word first")
             p(class="text")
                 | Y el 
-                input(type="text" class="word")
+                input(type="text" class="word first")
                 | de tu piel se quede igual
-
             p(class="text")
                 | Si perdiera el 
-                input(type="text" class="word")
+                input(type="text" class="word first")
                 | su belleza
-
             p(class="text")
                 | Y las flores su 
-                input(type="text" class="word")
+                input(type="text" class="word first")
                 | y su color
-
             p(class="text")
                 | No sería tan inmensa mi 
-                input(type="text" class="word")
-
+                input(type="text" class="word first")
             p(class="text")
                 | Como aquella de quedarme sin tu 
-                input(type="text" class="word")
-
+                input(type="text" class="word first")
             p(class="text")
                 | Me importas 
-                input(type="text" class="word")
+                input(type="text" class="word first")
                 | , y tú, y tú
             p(class="text")
                 | Y solamente tú, y 
-                input(type="text" class="word")
+                input(type="text" class="word first")
                 | , y tú
             p(class="text")
                 | Me importas tú, y tú, y 
-                input(type="text" class="word")
-            input(type="text" class="word")
+                input(type="text" class="word first")
+                br
+                | y nadie mas que tú
             button(id="validar" class="validar btn") VALIDAR
+            .error-label(id="error")
+                .bars(id="bars")
+                    .bar1
+                    .bar2
+                p(class="text") Algo estuvo mal
         .song
+            p(class="text")
+                | Desde el cielo todo es más 
+                input(type="text" class="word second")
+                br
+                | déjame llevarte a las 
+                input(type="text" class="word second")
+                | otra vez como la noche de ayer.
+            p(class="text")
+                | Vámonos a 
+                input(type="text" class="word second")
+                | donde nadie vaya a buscarte ni a ti ni a mí.
+            p(class="text")
+                | Donde todo es más callado y 
+                input(type="text" class="word second")
+                | pa' los dos.
+            p(class="text")
+                | Donde no hay nadie más que 
+                input(type="text" class="word second")
+                | y 
+                input(type="text" class="word second")
+            p(class="text")
+                | Dejemos la tierra llena de gente tan 
+                input(type="text" class="word second")
+                | que nos quiere aplastar.
+            p(class="text")
+                | Vámonos de viaje a las estrellas y a Marte a olvidar nuestros problemas tan 
+                input(type="text" class="word second")
+                br
+                | contemplemos las 
+                input(type="text" class="word second")
+                | y todas nuestras misiones que nos quitan el 
+                input(type="text" class="word second")
+                | que sentimos en la tierra
+            p(class="text")
+                | Toma mi 
+                input(type="text" class="word second")
+                | y vámonos de aquí.
+            p(class="text")
+                | Ponte tú suéter gris y 
+                input(type="text" class="word second") 
+                | a huir.
+            p(class="text")
+                | Vámonos a Marte donde nadie vaya a buscarte, ni a 
+                input(type="text" class="word second")
+                | ni a 
+                input(type="text" class="word second")
+            p(class="text")
+                | Donde todo es más 
+                input(type="text" class="word second")
+                | y solitario pa' los dos.
+            p(class="text")
+                | Donde no hay nadie más que 
+                input(type="text" class="word second")
+                | y 
+                input(type="text" class="word second")
+            button(id="validar" class="validar btn") VALIDAR
+            .error-label(id="error")
+                .bars(id="bars")
+                    .bar1
+                    .bar2
+                p(class="text") código incorrecto
