--- a/src/static/styles/global.css
+++ b/src/static/styles/global.css
@@ -16,6 +16,17 @@
     padding: 0;
 }
 
+input {
+    font-family: var(--TEXT-FONT);
+    font-size: 25px;
+}
+
+.input {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .title {
     font-family: var(--TITLES-FONT);
 }
