--- a/src/static/styles/puzzle/fifth.css
+++ b/src/static/styles/puzzle/fifth.css
@@ -2,16 +2,12 @@ body {
   background-color: var(--YELLOW);
 }
 
-.instructions {
+.puzzles, .clear, .message, .instructions {
   text-align: center;
 }
 
-.puzzles {
-  text-align: center;
-}
-
-.clear {
-  text-align: center;
+.text {
+  font-size: 25px;
 }
 
 ul {
@@ -110,4 +106,8 @@ ul li:first-child {
 
 ul li:last-child {
   border-radius: 0 5px 5px 5px;
+}
+
+.finish, .song {
+  display: none;
 }
