work in progress page

--- a/src/views/error/inProgress.pug
+++ b/src/views/error/inProgress.pug
@@ -9,6 +9,6 @@ html(lang="en")
         title WORK IN PROGRESS
     body 
         .msg
-            h2 Esto aun no está listo, pero se está trabajando para completarlo 🐸
-            p Si quieres saber cuando estará listo, contacta al desarrollador o sea yo jajant
-        img(src="/images/rata.gif", alt="rata")
+            h2(class="title") Esto aun no está listo, pero se está trabajando para completarlo 🐸
+            p(class="text") Si quieres saber cuando estará listo, contacta al desarrollador o sea yo jajant
+            img(src="/images/rata.gif", alt="rata")
