--- a/src/views/puzzle/third.pug
+++ b/src/views/puzzle/third.pug
@@ -5,5 +5,14 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="shortcut icon", href="/images/icon.png", type="image/x-icon")
+        link(rel="stylesheet", href="/styles/global.css")
+        link(rel="stylesheet", href="/styles/puzzle/third.css")
         title third-puzzle
     body
+        h2(class="title")
+            | Para este reto quiero que escribas 2 cartas, la primera para la tu de 1 año
+            | en un año te la daré, pero quiero que escribas tus pensamientos, tus miedos, inseguridades, tus metas
+            | expresa todo lo que no le puedes decir a nadie, las cosas que quieres hacer, tus expectativas conmigo, con tus seres queridos
+            | este es un espacio para desahogarte de todas las personas a tu al rededor, saca tu artista interno y escribe... ❤️
+        input(type="text", name="")
+        button(class="btn") Enviar
